--- a/package.json
+++ b/package.json
@@ -1,36 +1,49 @@
 {
-  "name": "geowox-ts",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@types/jest": "24.0.15",
-    "@types/node": "12.6.4",
-    "@types/react": "16.8.23",
-    "@types/react-dom": "16.8.4",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1",
-    "typescript": "3.5.3"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+	"name": "geowox-ts",
+	"version": "0.1.0",
+	"private": true,
+	"dependencies": {
+		"@types/dotenv": "^6.1.1",
+		"@types/google-map-react": "^0.23.12",
+		"@types/highcharts": "^5.0.41",
+		"@types/jest": "24.0.15",
+		"@types/node": "12.6.4",
+		"@types/react": "^16.8.23",
+		"@types/react-dom": "16.8.4",
+		"@types/react-highcharts": "^16.0.1",
+		"@types/react-router-dom": "^4.3.4",
+		"dotenv": "^8.0.0",
+		"google-map-react": "^1.1.4",
+		"highcharts": "^7.1.2",
+		"highcharts-react-official": "^2.2.2",
+		"history": "^4.9.0",
+		"node-sass": "^4.12.0",
+		"react": "^16.8.6",
+		"react-dom": "^16.8.6",
+		"react-router": "^5.0.1",
+		"react-router-dom": "^5.0.1",
+		"react-scripts": "3.0.1",
+		"typescript": "3.5.3"
+	},
+	"scripts": {
+		"start": "react-scripts start",
+		"build": "react-scripts build",
+		"test": "react-scripts test",
+		"eject": "react-scripts eject"
+	},
+	"eslintConfig": {
+		"extends": "react-app"
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	}
 }
